<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_your_favourite_categories"
        android:textSize="30sp"
        tools:ignore="InOrMmUsage" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="603dp"
        android:text="@string/category_fantasy"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="555dp"
        android:text="@string/category_adventure"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="499dp"
        android:text="@string/category_mystery"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="447dp"
        android:text="@string/category_horror"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="398dp"
        android:text="@string/category_thriller"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="152dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="305dp"
        android:onClick="SearchCategories"
        android:text="@string/category_search" />


</RelativeLayout>