<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">




        <!--<item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menubook"
            android:title="@string/categories"

            />-->
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_baseline_format_list_numbered_rtl_24"
            android:title="@string/wish"

            />

        <item
            android:id="@+id/favourite_books"
            android:icon="@drawable/ic_favorite_24"
            android:title="Favourites"
            />

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notifications" />

    </group>

    <group>
        <item
            android:id="@+id/Logout_btn"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/logout"

            />
    </group>


</menu>